# astrobio_gen

./: .cdsapirc  .gitattributes  .gitignore  .pre-commit-config.yaml  ACTIONABLE_NEXT_STEPS.md  APACHE_LICENSE  ATTENTION_CLEANUP_REPORT.md  AUTOMATIC_DATA_DOWNLOAD_ENABLED.md  AWS_CREDENTIALS_QUICK_REFERENCE.md  AWS_CREDENTIALS_SETUP_GUIDE.md  Astrobiogen_Deep_Learning.ipynb  BUCKET_NAMES_TO_CREATE.txt  CLOUDFLARE_R2_MIGRATION_PLAN.md  COMPLETE_EXPERIMENTAL_ROADMAP_FOR_ISEF.md  COMPLETE_INTEGRATION_SUMMARY.md  COMPREHENSIVE_20_ROUND_ANALYSIS.md  COMPREHENSIVE_CODEBASE_ANALYSIS_REPORT.md  COMPREHENSIVE_COMPLETION_REPORT.md  COMPREHENSIVE_DATA_SYSTEM_GUIDE.md  COMPREHENSIVE_DEDUPLICATION_ANALYSIS.md  COMPREHENSIVE_FINAL_STATUS_REPORT.md  COMPREHENSIVE_FIXES_COMPLETION_REPORT.md  COMPREHENSIVE_INTEGRATION_STATUS_REPORT.md  COMPREHENSIVE_SYSTEM_AUDIT_REPORT.md  COMPREHENSIVE_SYSTEM_EVALUATION.md  COMPREHENSIVE_VERIFICATION_REPORT.md  CONTRIBUTORS.md  CRITICAL_INTEGRATION_FIXES_SUMMARY.md  CRITICAL_ISSUES_ANALYSIS.md  CRITICAL_ISSUES_AND_OPTIMIZATIONS.md  CUSTOMER_DATA_TREATMENT_CRITICAL_ANALYSIS_REPORT.md  DATACUBE_INTEGRATION_SUMMARY.md  DATA_BUILD_MODELS_CRITICAL_ANALYSIS_REPORT.md  DATA_FLOW_COMPLETE_GUIDE.md  DATA_MANIFEST.md  DATA_QUALITY_GUIDE.md  DATA_SOURCE_EXPANSION_COMPLETE.md  DATA_UTILIZATION_OPTIMIZATION_REPORT.md  DEEP_CODE_ANALYSIS_REPORT.md  DEEP_SKEPTICAL_ERROR_ANALYSIS_REPORT.md  (+293 more)
.dvc/: config  config_backup
Introductions/: ADVANCED_CUSTOMER_DATA_TREATMENT_SYSTEM.md  COMPLETE_SYSTEM_RESTORATION_SUMMARY.md  COMPREHENSIVE_DATA_INTEGRATION_SUCCESS.md  COMPREHENSIVE_WEB_CRAWL_ENHANCEMENTS.md  CONFLICT_RESOLUTION_SUMMARY.md  CRITICAL_CONFLICTS_ANALYSIS.md  CUSTOMER_DATA_TREATMENT_FIXES_SUMMARY.md  DATA_QUALITY_GUIDE.md  DUPLICATION_CHECK_SUMMARY.md  ENHANCED_TRAINING_SYSTEM_SUMMARY.md  FIRST_ROUND_DATA_CAPTURE_README.md  FIXES_APPLIED_SUMMARY.md  INTEGRATION_FIXES_SUMMARY.md  MANDATORY_REQUIREMENTS_SUCCESS_SUMMARY.md  NEW_LAPTOP_SETUP_CHECKLIST.md  PRIORITY_1_COMPLETE_SUMMARY.md  PROJECT_CONTEXT_SUMMARY.md  README_ML_Setup.md  SYSTEM_ENHANCEMENTS_README.md  TIER5_AUTONOMOUS_DISCOVERY_SUMMARY.md
Research Experiments/: COMPREHENSIVE_EXPERIMENTAL_FRAMEWORK.md  CRITICAL_ANALYSIS_REPORT.md  CRITICAL_GAPS_REMEDIATION.md  DATA_AVAILABILITY_STATEMENT.md  DATA_COLLECTION_PROTOCOLS.md  DETAILED_EXPERIMENTAL_PROCEDURES.md  ETHICS_AND_IRB_DOCUMENTATION.md  INNOVATIONS_EXECUTIVE_SUMMARY.md  ISEF_OFFICIAL_ABSTRACT.md  RESEARCH_EXECUTION_CHECKLIST.md  RESEARCH_FRAMEWORK_SUMMARY.md  STATISTICAL_ANALYSIS_GUIDE.md  THREE_WORLD_CLASS_INNOVATIONS.md
api/: __init__.py  llm_endpoints.py  main.py
archive/: galactic_research_network_legacy.py  peft_llm_integration_legacy.py  train_cube_legacy.py  train_enhanced_cube_legacy.py  train_enhanced_cube_legacy_original.py  train_legacy.py  train_legacy_original.py
chat/: ENHANCED_CHAT_SYSTEM_SUMMARY.md  __init__.py  chat_server.py  demo_enhanced_chat.py  demo_enhanced_chat_standalone.py  enhanced_chat_server.py  enhanced_narrative_chat.py  enhanced_tool_router.py  tool_router.py
conf/: config.yaml
config/: config.yaml  defaults.yaml  enhanced_cube.yaml  first_round_config.json  master_training.yaml
customer_data_treatment/: advanced_customer_data_orchestrator.py  federated_analytics_engine.py  quantum_enhanced_data_processor.py
data/: README.md  comprehensive_crawling_demonstration.json  enhanced_data_loader.py
data_build/: __init__.py  add_systematic_bias_source.py  advanced_data_system.py  advanced_quality_system.py  automated_data_pipeline.py  br08606_to_env.py  comprehensive_13_sources_integration.py  comprehensive_data_annotation_treatment.py  comprehensive_data_expansion.py  comprehensive_multi_domain_acquisition.py  data_versioning_system.py  database_config.py  dirlists_to_master_csv.py  edges_to_graph.py  exoplanet_data_expansion_integration.py  expanded_2025_data_integration.py  expanded_real_databases.py  fetch_1000g_dirlists.sh  fetch_1000g_indices.py  fetch_gcm_cubes.py  fetch_hsa_pathways.py  fetch_kegg_lists.py  fetch_kegg_pathways.py  generate_synthetic_edges.py  gtdb_integration.py  indices_to_sample_table.py  integration_with_astrobio_platform.py  jgi_gems_integration.py  kegg_real_data_integration.py  kegg_to_edges.py  make_env_vectors.py  map01220_to_ids.py  metadata_annotation_system.py  metadata_db.py  multi_modal_storage_layer.py  multi_modal_storage_layer_fixed.py  multi_modal_storage_layer_simple.py  nasa_ahed_integration.py  nc_to_zarr.py  ncbi_agora2_integration.py  (+20 more)
datamodules/: __init__.py  cube_dm.py  gold_pipeline.py  kegg_dm.py
deployment/: __init__.py  real_time_production_system.py
env/: conda-linux-cuda12.4.yml
examples/: secure_data_usage.py
experiments/: ablations.py  biosig_fusion.py  gcm_bench.py
feedback/: feedback_collection_api.py  feedback_integration_layer.py  user_feedback_system.py
infrastructure_reports/: aws_setup_report.json  database_integration_report.json
integration_testing/: final_integration_validation_20250715_015916.json  final_integration_validation_20250716_225401.json  final_integration_validation_20250717_000204.json  final_integration_validation_20250717_234006.json  test_results_integration_test_20250713_130838.json
models/: __init__.py  _init_.py  advanced_experiment_orchestrator.py  advanced_graph_neural_network.py  advanced_multimodal_llm.py  astrobiology_diffusion_model.py  attention_integration_2025.py  autonomous_research_agents.py  autonomous_robotics_system.py  autonomous_scientific_discovery.py  causal_discovery_ai.py  causal_world_models.py  collaborative_research_network.py  continuous_self_improvement.py  cross_modal_fusion.py  customer_data_llm_pipeline.py  datacube_unet.py  deep_cnn_llm_integration.py  domain_encoders_simple.py  domain_specific_encoders.py  domain_specific_encoders_fixed.py  embodied_intelligence.py  enhanced_datacube_unet.py  (+48 more)
rust_modules/: Cargo.toml
rust_modules/src/: concurrent_data_acquisition.rs  datacube_processor.rs  error.rs  inference_engine.rs  lib.rs  memory_pool.rs  simd_ops.rs  training_accelerator.rs  utils.rs
(+5773 files in other folders)
